--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,15 @@
 version: '3.8'
 services:
   db:
-    image: postgres:latest
+    image: postgres:14.1-alpine
     restart: always
     environment:
-      POSTGRES_DB: exampledb
-      POSTGRES_USER: exampleuser
-      POSTGRES_PASSWORD: examplepass
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
     ports:
-      - "5432:5432"
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-
+      - '5432:5432'
+    volumes: 
+      - db:/var/lib/postgresql/data
 volumes:
-  postgres_data:
+  db:
+    driver: local
