--- a/SeatReserve-Pro/SeatReserve-Pro.csproj
+++ b/SeatReserve-Pro/SeatReserve-Pro.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="Npgsql" Version="8.0.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BusDBClasses\BusDBClasses.csproj" />
+  </ItemGroup>
+
 </Project>
