--- a/SeatReserve-Pro_DBService/SeatReserve-Pro_DBService.csproj
+++ b/SeatReserve-Pro_DBService/SeatReserve-Pro_DBService.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>net8.0-windows</TargetFramework>
     <RootNamespace>SeatReserve_Pro_DBService</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
@@ -10,6 +10,10 @@
 
   <ItemGroup>
     <PackageReference Include="Npgsql" Version="8.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\BusDBClasses\BusDBClasses.csproj" />
   </ItemGroup>
 
 </Project>
