--- a/SeatReserve-Pro_DBService/SeatReserve-Pro_DBService.csproj
+++ b/SeatReserve-Pro_DBService/SeatReserve-Pro_DBService.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="Npgsql" Version="8.0.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\SeatReserve-Library\SeatReserve-Library.csproj" />
+  </ItemGroup>
+
 </Project>
