Removed the Publish-Ready folder Edited the Connection String for the Database

--- a/SeatReserve-Library/SeatReserve-Library.csproj
+++ b/SeatReserve-Library/SeatReserve-Library.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="Npgsql" Version="8.0.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="UserClasses\" />
+  </ItemGroup>
+
 </Project>
